--- a/index.html
+++ b/index.html
@@ -13,9 +13,23 @@
      <h3 style="background-color: aqua; color=black; text-align:center;"></h3>Education</h3>
      <ul>
         <li>General Certificate of Education (G.C.E.) Ordinary Level</li>
-        <img src="./ol.jpg" height="750" alt="ol result">
+            <ul>
+               <li>Mathematics      - A</li>
+               <li>English          - B</li>
+               <li>Tamil            - B</li>
+               <li>Science          - B</li>
+               <li>Islam            - B</li>
+               <li>History          - A</li>
+               <li>Health Scienec   - A</li>
+               <li>Tamil Lit        - B</li>
+               <li>Commerce         - B</li>
+            </ul>
         <li>General Certificate of Education (G.C.E.) Advance Level</li>
-        <img src="./al.jpg" height="750" alt="al result">
+            <ul>
+               <li>Economics - C </li>
+               <li>Accounting - C</li>
+               <li>Bussiness Studies - C</li>
+            </ul>
      </ul>
      <h3 style="background-color: aqua; color=black; text-align:center;">Skills</h3>
      <ul>
